# pplx-unofficial-sdk

./: .copilot-instructions.md  .env.example  .eslintrc.cjs  .eslintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE-GRAPH-SUMMARY.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  README_AGENT.md  README_HAR_TOOLKIT.md  endpoints_ast_extracted.json  endpoints_ast_extracted_full.json  har_agent.py  package-lock.json  package.json  perplexity-openapi-v3.1.json  perplexity_endpoints_spec.json  perplexity_spa_full_spec.json  pyproject.toml  ruff.toml  test-service-worker.js  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS  dependabot.yml
.github/copilot/: README.md
.github/workflows/: ci-python.yml  ci-typescript.yml  ci.yml  codeql.yml  network-health.yml  pr-labeler.yml  release.yml  schema-sync.yml  update-readme.yml  update-service-worker-manifest.yml  verify-spa-assets.yml
data/spa-analysis/: all_endpoints.json  architecture_summary.json  implementation_roadmap.json
docs/: CODE-GRAPH-GUIDE.md  README.md  REST-API-GUIDE.md  SERVICE-WORKER-GUIDE.md  SSE-STREAMING-GUIDE.md  architecture.md  sw-analyzer-roadmap.md  sw-analyzer-workflow.md  sw-analyzer.md  workspace.md
examples/: debug-mode.ts  rest-client-examples.ts  service-worker-examples.ts  sse-streaming-examples.ts  sse-streaming.ts
infra/docker/: README.md  docker-compose.yml
reverse-engineering/: pplx-stream-D3-uFWQX.js  spa-shell-Cc8l94kf.js
schemas/tools/: schema-extractor.py  validator.py
scripts/: README.md  fetch-sw-manifest.mjs  update_asset_index.py  validate-workspace.py  verify_integrity.py
sdk-consumer-bot/: README.md  package-lock.json  package.json  tsconfig.json
services/gateway/: pyproject.toml
services/gateway/src/: __init__.py  app.py  config.py
services/gateway/tests/: test_api.py
spa-assets/: AUTH-ENDPOINTS-GUIDE.md  CHANGELOG.md  PUSH_ARCHIVE.md  README.md
src/: index.ts  pplx-client.test.ts  pplx-client.ts  pplx-connectors-client.ts  pplx-rest-client.ts  pplx-service-worker-client.ts
src/sse/: client.ts  (+8 more)
tests/: setup.ts
userscripts/: README.md  perplexity-yolo-mcp.user.js
(+66 files in other folders)
