[project]
name = "perplexity-gateway"
version = "0.1.0"
requires-python = ">=3.12"
description = "API Gateway for Perplexity AI workspace"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "aiohttp>=3.9.0",
    "sse-starlette>=2.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
